{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 168,
  "lineage": "b54218ee-8745-7708-1032-2ec31505890a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013948180024:internet-gateway/igw-016d5248c18ac5ba6",
            "id": "igw-016d5248c18ac5ba6",
            "owner_id": "013948180024",
            "vpc_id": "vpc-0eac0d184c7ae5c86"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013948180024:route-table/rtb-037df98d1d9557b87",
            "id": "rtb-037df98d1d9557b87",
            "owner_id": "013948180024",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016d5248c18ac5ba6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eac0d184c7ae5c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-a-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0017a0a1eabf885b5",
            "route_table_id": "rtb-037df98d1d9557b87",
            "subnet_id": "subnet-032eb1e522b9a460d"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-a-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011ad708ea47115b2",
            "route_table_id": "rtb-037df98d1d9557b87",
            "subnet_id": "subnet-0672ab81aca050096"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-a-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a838f63ede09bb4",
            "route_table_id": "rtb-037df98d1d9557b87",
            "subnet_id": "subnet-0585951152c4f7950"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.public_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013948180024:subnet/subnet-032eb1e522b9a460d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032eb1e522b9a460d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013948180024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0eac0d184c7ae5c86"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013948180024:subnet/subnet-0672ab81aca050096",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0672ab81aca050096",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013948180024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0eac0d184c7ae5c86"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013948180024:subnet/subnet-0585951152c4f7950",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0585951152c4f7950",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013948180024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0eac0d184c7ae5c86"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013948180024:vpc/vpc-0eac0d184c7ae5c86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c6c82cf85ec26aa",
            "default_route_table_id": "rtb-0ede501c2d02c1152",
            "default_security_group_id": "sg-03138ad35fc3303d8",
            "dhcp_options_id": "dopt-0bfbd478bb48d047c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eac0d184c7ae5c86",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ede501c2d02c1152",
            "owner_id": "013948180024",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate.module.ecs-fargate-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013948180024:security-group/sg-0439a65f380237dab",
            "description": "Allow inbound access from the LB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0439a65f380237dab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0272b87b5e831aae6"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "gp2-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "013948180024",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gp2-ecs-tasks-sg"
            },
            "tags_all": {
              "Name": "gp2-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eac0d184c7ae5c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate.module.ecs-fargate-service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3968569884",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0439a65f380237dab",
            "security_group_rule_id": "sgr-0651999458669cb98",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.ecs-fargate.module.ecs-fargate-service.aws_security_group.ecs_tasks_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate.module.ecs-fargate-service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_through_http_and_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3000,
            "id": "sgrule-1132535711",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0439a65f380237dab",
            "security_group_rule_id": "sgr-0d70969cdd0502642",
            "self": false,
            "source_security_group_id": "sg-0272b87b5e831aae6",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "module.ecs-fargate.module.ecs-fargate-service.aws_security_group.ecs_tasks_sg",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_lb.lb",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_lb_target_group.lb_http_tgs",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_lb_target_group.lb_https_tgs",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_security_group.lb_access_sg",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.module.lb_logs_s3.aws_s3_bucket.logs",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.module.lb_logs_s3.random_string.random",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.random_string.lb_name"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:013948180024:loadbalancer/app/gp2-lb/c08c4158fef7bbb6",
            "arn_suffix": "app/gp2-lb/c08c4158fef7bbb6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "gp2-lb-374063441.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:013948180024:loadbalancer/app/gp2-lb/c08c4158fef7bbb6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gp2-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0272b87b5e831aae6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0585951152c4f7950"
              },
              {
                "subnet_id": "subnet-0672ab81aca050096"
              }
            ],
            "subnets": [
              "subnet-0585951152c4f7950",
              "subnet-0672ab81aca050096"
            ],
            "tags": {
              "Name": "gp2-lb"
            },
            "tags_all": {
              "Name": "gp2-lb"
            },
            "vpc_id": "vpc-0eac0d184c7ae5c86",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_security_group.lb_access_sg",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.module.lb_logs_s3.aws_s3_bucket.logs",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.module.lb_logs_s3.random_string.random",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.random_string.lb_name"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_http_listeners",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default_http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:013948180024:listener/app/gp2-lb/c08c4158fef7bbb6/188a77e3722f2e0a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:013948180024:targetgroup/gp2-http-3000/9b37434ceaedf7db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:013948180024:listener/app/gp2-lb/c08c4158fef7bbb6/188a77e3722f2e0a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:013948180024:loadbalancer/app/gp2-lb/c08c4158fef7bbb6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_lb.lb",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_lb_target_group.lb_http_tgs",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_security_group.lb_access_sg",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.module.lb_logs_s3.aws_s3_bucket.logs",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.module.lb_logs_s3.random_string.random",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.random_string.lb_name"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_http_tgs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:013948180024:targetgroup/gp2-http-3000/9b37434ceaedf7db",
            "arn_suffix": "targetgroup/gp2-http-3000/9b37434ceaedf7db",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:013948180024:targetgroup/gp2-http-3000/9b37434ceaedf7db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gp2-http-3000",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "gp2-http-3000"
            },
            "tags_all": {
              "Name": "gp2-http-3000"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0eac0d184c7ae5c86"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_lb.lb",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_security_group.lb_access_sg",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.module.lb_logs_s3.aws_s3_bucket.logs",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.module.lb_logs_s3.random_string.random",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.random_string.lb_name"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:013948180024:security-group/sg-0272b87b5e831aae6",
            "description": "Controls access to the Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0272b87b5e831aae6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gp2-lb-access-sg",
            "name_prefix": "",
            "owner_id": "013948180024",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gp2-lb-access-sg"
            },
            "tags_all": {
              "Name": "gp2-lb-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eac0d184c7ae5c86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_through_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default_http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3838402180",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0272b87b5e831aae6",
            "security_group_rule_id": "sgr-01a9991e300a99558",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.ecs-fargate.module.ecs-fargate-service.module.ecs-alb.aws_security_group.lb_access_sg"
          ]
        }
      ]
    }
  ]
}